syntax = "proto3";

message Request {
    oneof peripheral {
        FanRequest fan = 1;
        TempRequest temp = 2;
        LightRequest light = 3;
    }
}

message FanRequest {
    message Set {
        float duty = 1;
    }

    message Get { }

    oneof command {
        Get get = 1;
        Set set = 2;
    }
}

message LightRequest {
    message Set {
        float duty = 1;
    }

    message Get { }

    oneof command {
        Get get = 1;
        Set set = 2;
    }
}

message TempRequest {
    message Get { }

    oneof command {
        Get get = 1;
    }
}

message FanResponse {
    float duty = 1;
    int32 rpm = 2;
}

message LightResponse {
    float duty = 1;
}

message TempResponse {
    float temperature_celsius = 1;
    float humidity_percent = 2;
}

message Response {
    oneof peripheral {
       FanResponse fan = 1;
       TempResponse temp = 2;
       LightResponse light = 3;
    }
}
